# CMakeTraining

./: README.md  Session 1 - CMake and Building CXX.pptx  Session 2 - More Advanced CMake.pptx
exercises/session1/: test_regression.cpp
exercises/session1/quad_reg/: MovingQuadReg.h
exercises/session2/: CMakeLists.txt
exercises/session2/quad_reg/: MovingQuadReg.cpp
solutions/session2/exercise1/: CMakeLists.txt
solutions/session2/exercise2/: CMakeLists.txt
solutions/session2/exercise2/quad_reg/: CMakeLists.txt
